# rust-service-template

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  config.example.yaml
src/: config.rs  main.rs
