[package]
name = "mygreatservice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "env"] }
log = "0.4.21"
log4rs = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
] }
